Pull request #5: Change musl prefix for tools steps as well.
Merge in CORE/ffs from ~ALEX2101/ffs:master to master

Squashed commit of the following:

commit a87f7651d739f489e5c57c5617cfb11af37df238
Author: alex2101 <alex2101@gmail.com>
Date:   Mon May 16 20:44:53 2022 -0300

    Change musl prefix for tools steps as well.

--- a/profiles/gnu/steps/fchroot.yaml
+++ b/profiles/gnu/steps/fchroot.yaml
@@ -5,6 +5,11 @@ fchroot:
     - linux: |
         make mrproper
         make INSTALL_HDR_PATH=/usr headers_install
+    - m4: |
+        ./configure \
+        --prefix=/usr
+        make
+        make install
     - perl: |
         ln -sf ../tools/bin/pwd /bin
         sh Configure -des \
@@ -24,6 +29,7 @@ fchroot:
         ../configure \
         --prefix=/usr \
         --enable-stack-protector=strong \
-        --with-headers=/usr/include
+        --with-headers=/usr/include \
+        libc_cv_slibdir=/lib
         make
         make install
