--- a/profiles/musl/steps/cross_tools.yaml
+++ b/profiles/musl/steps/cross_tools.yaml
@@ -41,8 +41,8 @@ cross_tools:
           --enable-cxx \
           --disable-static
         make
-        make install
         make check
+        make install
     - mpfr: |
         LDFLAGS="-Wl,-rpath,${CLFS}/cross-tools/lib" ./configure \
           --prefix=${CLFS}/cross-tools \
@@ -97,8 +97,8 @@ cross_tools:
     - musl: |
         CC="${CLFS_TARGET}-gcc ${CLFS_CFLAGS}" \
           ./configure \
-          CROSS_COMPILE=${CLFS_TARGET}- \
-          --prefix=/ \
+          --prefix=/tools \
+          --build=${CLFS_HOST} \
           --target=${CLFS_TARGET}
         make
 
@@ -111,7 +111,7 @@ cross_tools:
         install -d ${CLFS}/tools/${CLFS_TARGET}
         ln -sf ../lib ${CLFS}/tools/${CLFS_TARGET}/lib
 
-        DESTDIR=${CLFS}/tools make install
+        make DESTDIR=${CLFS} install
         cd "${CLFS}"/tools/lib
         rm -f ld-musl-{{musl_lib_arch}}.so.1
         ln -sf libc.so ld-musl-{{musl_lib_arch}}.so.1
@@ -146,9 +146,4 @@ cross_tools:
           --with-mpc=${CLFS}/cross-tools
         make AS_FOR_TARGET="${CLFS_TARGET}-as" \
           LD_FOR_TARGET="${CLFS_TARGET}-ld"
-        make install
-    - file: |
-        ./configure \
-        --prefix=${CLFS}/cross-tools
-        make
         make install
