--- a/profiles/musl/steps/tools.yaml
+++ b/profiles/musl/steps/tools.yaml
@@ -2,50 +2,63 @@ tools:
   defaults:
     template: tools.tmpl
   steps:
-    - none: |
-        # A local 'patchelf' command is currently required for the final cross_tools to run
-        which patchelf
+    - m4: |
+        ./configure \
+        --prefix=/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make DESTDIR=${CLFS} install
     - gmp: |
         CC_FOR_BUILD=gcc \
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --enable-cxx
         make
-        make install
+        make DESTDIR=${CLFS} install
     - mpfr: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
+        make DESTDIR=${CLFS} install
     - mpc: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
-    - isl: |
-        ./configure \
-        --prefix=${CLFS}/tools \
-        --build=${CLFS_HOST} \
-        --host=${CLFS_TARGET}
-        make
-        make install
+        make DESTDIR=${CLFS} install
     - zlib: |
         unset CC CXX AR AS RANLIB LD STRIP
         CHOST=${CLFS_TARGET} \
         ./configure \
-        --prefix=${CLFS}/tools
+        --prefix=/tools
         make
-        make install
+        make DESTDIR=${CLFS} install
+    - gettext: |
+        ./configure \
+        --prefix=/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --without-emacs \
+        --disable-shared
+        make
+        make DESTDIR=${CLFS} install
+    - bison: |
+        ./configure \
+        --prefix=/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make DESTDIR=${CLFS} install
     - binutils: |
         mkdir binutils-build && cd binutils-build
         ../configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --target=${CLFS_TARGET} \
@@ -59,7 +72,7 @@ tools:
         --with-system-zlib \
         --enable-threads
         make
-        make install
+        make DESTDIR=${CLFS} install
     - gcc: |
         sed -i 's|^RAW_CXX_FOR_TARGET="$CXX_FOR_TARGET|& -nostdinc++|' configure
         mkdir gcc-build && cd gcc-build
@@ -69,10 +82,12 @@ tools:
         --enable-secureplt \
         --enable-decimal-float=no \
         {%- endif %}
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --target=${CLFS_TARGET} \
+        CC_FOR_TARGET="${CLFS_TARGET}-gcc" \
+        --with-build-sysroot=${CLFS} \
         --with-local-prefix=${CLFS}/tools \
         --disable-multilib \
         --enable-languages=c,c++ \
@@ -84,12 +99,12 @@ tools:
         --disable-libsanitizer
         make AS_FOR_TARGET="${AS}" \
         LD_FOR_TARGET="${LD}"
-        make install
+        make DESTDIR=${CLFS} install
     - ncurses: |
         sed -i -e "s/INSTALL_OPT_S=\\\"-s/& --strip-program=${STRIP}/" configure
         mkdir ncurses-build && cd ncurses-build
         ../configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --with-shared \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
@@ -98,13 +113,13 @@ tools:
         --enable-overwrite \
         --with-build-cc=gcc \
         --enable-overwrite \
-        --with-default-terminfo-dir=${CLFS}/tools/share/terminfo \
+        --with-default-terminfo-dir=/tools/share/terminfo \
         --with-termlib
         make
-        make install
+        make DESTDIR=${CLFS} install
         cd .. && mkdir ncursesw-build && cd ncursesw-build
         ../configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --with-shared \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
@@ -113,11 +128,11 @@ tools:
         --enable-overwrite \
         --with-build-cc=gcc \
         --enable-widec \
-        --includedir=${CLFS}/tools/include/ncursesw \
-        --with-default-terminfo-dir=${CLFS}/tools/share/terminfo \
+        --includedir=/tools/include/ncursesw \
+        --with-default-terminfo-dir=/tools/share/terminfo \
         --with-termlib
         make
-        make install
+        make DESTDIR=${CLFS} install
     - bash: |
         cat > config.cache << "BASH_EOF"
         ac_cv_func_mmap_fixed_mapped=yes
@@ -134,13 +149,13 @@ tools:
         gt_cv_int_divbyzero_sigfpe=yes
         BASH_EOF
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --without-bash-malloc \
         --cache-file=config.cache
         make
-        make install
+        make DESTDIR=${CLFS} install
         test -x ${CLFS}/tools/bin/bash
         # set up initial shells in correct location for "#!/bin/sh" and "#!/bin/bash" scripts:
         rm -f ${CLFS}/bin/bash ${CLFS}/bin/sh || true
@@ -155,99 +170,90 @@ tools:
         make PREFIX=${CLFS}/tools install
     - check: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --disable-subunit
         make
-        make install
+        make DESTDIR=${CLFS} install
     - coreutils: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --enable-install-program=hostname \
         --cache-file=config.cache
         sed -i -e 's/^man1_MANS/#man1_MANS/' Makefile
         make
-        make install
+        make DESTDIR=${CLFS} install
     - diffutils: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
+        make DESTDIR=${CLFS} install
     - file: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --with-pic=yes
         make
-        make install
+        make DESTDIR=${CLFS} install
     - findutils: |
         echo "gl_cv_func_wcwidth_works=yes" > config.cache
         echo "ac_cv_func_fnmatch_gnu=yes" >> config.cache
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --cache-file=config.cache
         make
-        make install
+        make DESTDIR=${CLFS} install
     - gawk: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
-    - gettext: |
-        EMACS="no" \
-        ./configure \
-        --prefix=${CLFS}/tools \
-        --build=${CLFS_HOST} \
-        --host=${CLFS_TARGET} \
-        --disable-shared
-        make
-        make install
+        make DESTDIR=${CLFS} install
     - grep: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
+        make DESTDIR=${CLFS} install
     - gzip: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
+        make DESTDIR=${CLFS} install
     - make: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --without-guile
         make
-        make install
+        make DESTDIR=${CLFS} install
     - patch: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
+        make DESTDIR=${CLFS} install
     - sed: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
+        make DESTDIR=${CLFS} install
     - tar: |
         cat > config.cache << BASH_EOF
         gl_cv_func_wcwidth_works=yes
@@ -261,12 +267,19 @@ tools:
         gl_cv_func_wcrtomb_retval=yes
         BASH_EOF
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --cache-file=config.cache
         make
-        make install
+        make DESTDIR=${CLFS} install
+    - texinfo: |
+        ./configure \
+        --prefix=/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET}
+        make
+        make DESTDIR=${CLFS} install
     - util-linux: |
         NCURSESW6_CONFIG=" " \
         NCURSES6_CONFIG=" " \
@@ -274,49 +287,55 @@ tools:
         NCURSES5_CONFIG=" " \
         LDFLAGS="-ltinfow" \
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET} \
         --disable-bash-completion \
         --disable-makeinstall-chown \
         --disable-makeinstall-setuid \
         --disable-nologin \
+        --without-systemd \
+        --disable-pylibmount \
         --without-python
         make
-        make install
+        make DESTDIR=${CLFS} install
     - nano: |
         LDFLAGS="-ltinfow" \
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
+        make DESTDIR=${CLFS} install
     - xz-utils: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
+        make DESTDIR=${CLFS} install
     - which: |
         ./configure \
-        --prefix=${CLFS}/tools \
+        --prefix=/tools \
         --build=${CLFS_HOST} \
         --host=${CLFS_TARGET}
         make
-        make install
+        make DESTDIR=${CLFS} install
+    - rsync: |
+        ./configure \
+        --prefix=/tools \
+        --build=${CLFS_HOST} \
+        --host=${CLFS_TARGET} \
+        --disable-openssl \
+        --disable-xxhash \
+        --disable-zstd \
+        --disable-lz4
+        make
+        make DESTDIR=${CLFS} install
     - none: |
-        find "${CLFS}"/tools -type f -exec file {} + | \
-          grep ELF | \
-          cut -d':' -f1 | \
-          xargs -I{} patchelf \
-          --set-interpreter "${DYNAMIC_LINKER#$CLFS}" \
-          --set-rpath /tools/lib/ {} 2>/dev/null || true
-        find ${CLFS}/tools -iname '*.pc' -exec sed -i -e "s|${CLFS}||g" {} \; || true
-        if [ ! -L "$CLFS/lib/ld-musl-{{musl_lib_arch}}.so.1" ]; then
-          ln -sf ../tools/lib/ld-musl-{{musl_lib_arch}}.so.1 "$CLFS/lib/ld-musl-{{musl_lib_arch}}.so.1"
-        fi
+        ln -sf ../tools/lib/ld-musl-{{musl_lib_arch}}.so.1 "$CLFS/lib/ld-musl-{{musl_lib_arch}}.so.1"
+
+        echo /lib:/usr/local/lib:/usr/lib:/tools/lib > ${CLFS}/etc/ld-musl-{{musl_lib_arch}}.path
 
         cat > ${CLFS}/etc/profile << "PROFILE_EOF"
         # Funtoo from Scratch /etc/profile for login shells in the temporary environment.
@@ -327,6 +346,7 @@ tools:
 
         export TERMINFO=/tools/share/terminfo
         export PATH=/bin:/usr/bin:/sbin:/usr/sbin:/tools/sbin:/tools/bin
+        export LD_LIBRARY_PATH=/lib:/usr/lib:/tools/lib
         export HOME=/
 
         umask 022
