--- a/sources.yaml
+++ b/sources.yaml
@@ -4,6 +4,9 @@ sources:
       url: https://ftp.gnu.org/gnu/{name}/{name}-{version}.tar.{ext}
       ext: xz
     packages:
+      - autoconf: 2.71
+      - automake: 1.16.5
+      - libtool: 2.4.6
       - binutils: 2.38
       - mpfr: 4.1.0
       - gmp: 6.2.1
@@ -110,6 +113,9 @@ sources:
       - pax-utils:
           version: 1.3.4
           url: https://gitweb.gentoo.org/proj/pax-utils.git/snapshot/pax-utils-{version}.tar.bz2
+      - sandbox:
+          version: 3.1
+          url: https://gitweb.gentoo.org/proj/sandbox.git/snapshot/sandbox-{version}.tar.bz2
       - portage:
           version: 3.0.30
           url: https://gitweb.gentoo.org/proj/portage.git/snapshot/portage-{version}.tar.bz2
